# hpc_cw

./: 3d.gnu  CMakeLists.txt  Makefile  README.MD  ShallowWater.cpp  contour.gnu  main  main.cpp  output.txt
Results/: runtime.eps  speedup.eps
include/: ShallowWater.h
output/: main
plot/: 3d.gnu
src/: ShallowWater.cpp  main.cpp
